service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-dashboard
  namespace: crypto-dashboard
spec:
  selector:
    app: crypto-dashboard
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
